@@ -1,3 +1,4 @@
+* Rename Model name. Replace _ to . (dot)
 * Add get_rec_name in ElectronicMail
 * Review INSTALL documentation
 * Test legal notice
